--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,34 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
+#root {
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home {
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #09d3ac;
+.face {
+  width: 100%;
+  height: 100%;
+  /* background-image: url('flowerface.jpg'); */
+}
+
+#face {
+  height: 100%;
+  width: 100%;
+  opacity: .8;
+}
+
+.hello {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 211, 163, 1);
+  background-size: 100% 100%;
 }
